Fix : update mirror.yml

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -1,4 +1,4 @@
-# server_mirror.yml
+# mirror.yml
 # This is a workflow that syncs everthing on this repository to another repository
 name: Sync this repository to another repository
 
