Init: yarn publish를 위한 프로젝트 정보 추가

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue3-kakao-maps",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
+  "private": false,
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -36,5 +36,9 @@
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.11"
-  }
+  },
+  "description": "kakao maps component library with vue3 and TS ",
+  "main": "index.js",
+  "author": "정서희 <jsh001505@naver.com>",
+  "license": "MIT"
 }
