--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Force push branch
         run:
           | # main 브랜치와 태그에 대하여 push합니다. gitlab에서 보호설정이 걸려있으면 Fail할 수 있습니다.
-          git push -f gitlab HEAD:server;
+          git push -f gitlab HEAD:develop;
       - name: Push tags
         run: |
           git push -f --tags gitlab;
