--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-kakao-maps",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": false,
   "type": "module",
   "scripts": {
@@ -39,6 +39,37 @@
   },
   "description": "kakao maps component library with vue3 and TS ",
   "main": "index.js",
-  "author": "정서희 <jsh001505@naver.com>",
+  "contributors": [
+    {
+      "name": "lire-eruel",
+      "email": "jsh001505@naver.com",
+      "url": "https://github.com/lireEruel"
+    },
+    {
+      "name": "ahjin",
+      "email": "chris2761@naver.com",
+      "url": "https://github.com/ahjinU"
+    },
+    {
+      "name": "yangsoyoung",
+      "email": "maysoyoung@gmail.com",
+      "url ": "https://github.com/YangSSo51"
+    },
+    {
+      "name": "khryu0610",
+      "email": "khryu0610@gmail.com",
+      "url ": "https://github.com/geekseal"
+    },
+    {
+      "name": "eunjinkim",
+      "email": "asd0755@naver.com",
+      "url": "https://github.com/aeroej"
+    },
+    {
+      "name": "goflvhxj96",
+      "email": "goflvhxj96@naver.com",
+      "url ": "https://github.com/goflvhxj96"
+    }
+  ],
   "license": "MIT"
 }
