Test: 빌드 초기 세팅 테스트, 머지 용이 아닙니다.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,13 @@
     {
       "path": "./tsconfig.vitest.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "CommonJS",
+    "esModuleInterop": true,
+    "declaration": true,
+    "strict": true,
+    "outDir": "dist"
+  }
 }
