--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "vue3-kakao-maps",
+  "name": "ryutest",
   "version": "0.0.0",
-  "private": true,
+  "private": false,
   "type": "module",
+  "module": "./dist/index.js",
+  "types": "./dist/main.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "dev": "vite",
+    "dev": "vite build --watch",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -36,5 +41,6 @@
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
     "vue-tsc": "^2.0.11"
-  }
+  },
+  "peerDependencies": {}
 }
