Chore: gitignore 및 prettier 설정

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,11 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "singleQuote": false,
+  "semi": true,
+  "useTabs": false,
   "tabWidth": 2,
-  "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "printWidth": 130,
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "endOfLine": "auto"
 }
