--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@typescript-eslint/parser": "^7.1.0",
+    "sass": "^1.75.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
