Chore: husky postinstall 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
+    "postinstall": "husky install",
     "format": "prettier --write src/",
     "lint": "eslint --cache --cache-location .eslintcache --fix --ext .ts,.vue src/"
   },
