--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@ coverage
 VUE3-KAKAO-MAPS/*
 # but keep the folder by keeping .gitkeep file
 !VUE3-KAKAO-MAPS/.gitkeep
+# 화면표시
+App.vue
+main.ts
+.env
