--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -15,7 +15,7 @@
 
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "types": ["node"],
+    "types": ["node", "kakao.maps.d.ts"],
     "allowJs": true // JavaScript 파일 포함 허용
   }
 }
