--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,12 +1,12 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "./.eslintrc.js"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "./.eslintrc.js", "src/**/*.ts"],
   "exclude": [],
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.vitest.tsbuildinfo",
 
     "lib": [],
-    "types": ["node", "jsdom"]
+    "types": ["node", "jsdom", "kakao.maps.d.ts"]
   }
 }
