Config: package.json에 type: module 추가

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,7 @@
     "cypress.config.*",
     "nightwatch.conf.*",
     "playwright.config.*",
-    "./.eslintrc.js"
+    ".eslintrc.cjs"
   ],
   "compilerOptions": {
     "composite": true,
