--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue3-kakao-maps",
   "version": "0.0.2",
   "private": false,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
