--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "vue3-kakao-maps",
   "version": "0.0.2",
   "private": false,
-  "type": "module",
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
+  "main": "./dist/index.umd.cjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.umd.cjs"
+      }
     }
   },
   "scripts": {
@@ -28,11 +33,6 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
-  "dependencies": {
-    "@typescript-eslint/parser": "^7.1.0",
-    "sass": "^1.75.0",
-    "vue": "^3.4.21"
-  },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.2",
     "@rushstack/eslint-patch": "^1.3.3",
@@ -47,6 +47,7 @@
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.12.5",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.7.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
@@ -62,19 +63,15 @@
     "jsdom": "^24.0.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "sass": "^1.75.0",
     "storybook": "^8.0.8",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-dts": "^3.8.2",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vitest": "^1.4.0",
+    "vue": "^3.4.23",
     "vue-tsc": "^2.0.11"
-  },
-  "peerDependencies": {
-    "vue": "^3.0.0"
-  },
-  "resolutions": {
-    "strip-ansi": "6.0.1"
   },
   "description": "kakao maps component library with vue3 and TS",
   "contributors": [
