--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue3-kakao-maps",
-  "version": "0.0.2",
+  "name": "ryutest",
+  "version": "0.1.9",
   "private": false,
   "type": "module",
   "main": "./dist/index.umd.cjs",
@@ -19,7 +19,8 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.umd.cjs"
       }
-    }
+    },
+    "./style.css": "./dist/style.css"
   },
   "scripts": {
     "dev": "vite",
@@ -28,11 +29,12 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "postinstall": "husky install",
+    "prepare": "husky install",
     "format": "prettier --write src/",
     "lint": "eslint --cache --cache-location .eslintcache --fix --ext .ts,.vue src/",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "prepack": "vite build"
   },
   "dependencies": {
     "kakao.maps.d.ts": "^0.1.39"
@@ -77,37 +79,5 @@
     "vue-tsc": "^2.0.11"
   },
   "description": "kakao maps component library with vue3 and TS",
-  "contributors": [
-    {
-      "name": "lire-eruel",
-      "email": "jsh001505@naver.com",
-      "url": "https://github.com/lireEruel"
-    },
-    {
-      "name": "ahjin",
-      "email": "chris2761@naver.com",
-      "url": "https://github.com/ahjinU"
-    },
-    {
-      "name": "yangsoyoung",
-      "email": "maysoyoung@gmail.com",
-      "url ": "https://github.com/YangSSo51"
-    },
-    {
-      "name": "khryu0610",
-      "email": "khryu0610@gmail.com",
-      "url ": "https://github.com/geekseal"
-    },
-    {
-      "name": "eunjinkim",
-      "email": "asd0755@naver.com",
-      "url": "https://github.com/aeroej"
-    },
-    {
-      "name": "goflvhxj96",
-      "email": "goflvhxj96@naver.com",
-      "url ": "https://github.com/goflvhxj96"
-    }
-  ],
   "license": "MIT"
 }
