Fix: .vue 에서 .ts 를 불러올 때 빌드가 되지 않는 이슈 해결

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     }
   ],
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"],
+      "@public/*": ["./public/*"]
+    },
     "types": ["kakao.maps.d.ts"],
     // Modules
     "module": "ESNext",
