--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.2",
-    "@rushstack/eslint-patch": "^1.3.3",
+    "@storybook/addon-docs": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
@@ -69,7 +69,7 @@
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
-    "storybook": "^8.0.8",
+    "storybook": "^8.0.9",
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-dts": "^3.8.2",
