--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.2",
     "@rushstack/eslint-patch": "^1.3.3",
+    "@storybook/addon-controls": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
     "@storybook/addon-links": "^8.0.8",
