Fix: 불필요한 설정 삭제

--- a/tsconfig.vitest.json
+++ b/tsconfig.vitest.json
@@ -1,6 +1,6 @@
 {
   "extends": "./tsconfig.app.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", ".eslintrc.cjs", "src/**/*.ts", ".storybook/main.ts", ".storybook/main.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", ".eslintrc.cjs", "src/**/*.ts"],
   "exclude": [],
   "compilerOptions": {
     "composite": true,
