--- a/package.json
+++ b/package.json
@@ -79,5 +79,6 @@
     "vue-tsc": "^2.0.11"
   },
   "description": "kakao maps component library with vue3 and TS",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://6620c768715fd00a32d656ec-uilycffpjo.chromatic.com/?path=/docs/stories-readme--docs"
 }
