--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "1.3.2",
+    "@rushstack/eslint-patch": "^1.10.2",
     "@storybook/addon-docs": "^8.0.9",
     "@storybook/addon-essentials": "^8.0.8",
     "@storybook/addon-interactions": "^8.0.8",
