Chore: @utils 엔트리포인트 지원

--- a/package.json
+++ b/package.json
@@ -19,6 +19,16 @@
         "types": "./dist/index.d.cts",
         "default": "./dist/index.umd.cjs"
       }
+    },
+    "./@utils": {
+      "import": {
+        "types": "./dist/utils/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/utils/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
     }
   },
   "scripts": {
