--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dist",
     "!dist/stories",
     "!dist/constants",
+    "!dist/libraries",
     "!**/*.stories.*"
   ],
   "exports": {
@@ -20,7 +21,7 @@
       },
       "require": {
         "types": "./dist/index.d.ts",
-        "default": "./dist/index.umd.cjs"
+        "default": "./dist/index.cjs"
       }
     },
     "./@utils": {
