--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-kakao-maps",
-  "version": "2.3.0",
+  "version": "2.3.1",
   "private": false,
   "type": "module",
   "main": "./dist/index.umd.cjs",
@@ -93,7 +93,7 @@
   },
   "description": "kakao maps component library with vue3 and TS",
   "license": "MIT",
-  "homepage": "https://6620c768715fd00a32d656ec-qjvjkblfbq.chromatic.com/?path=/docs/stories-readme--overview",
+  "homepage": "https://vue3-kakao-maps-docs.vercel.app/",
   "keywords": [
     "vue",
     "vue3",
